syntax = "proto3";

message Tx {
  string method = 1;
  bytes param = 2;
  string nonce = 3;
  bytes signature = 4;
  string nodeID = 5;
}

message Query {
  string fnName = 1;
  string param = 2;
}